--- a/_posts/2026-01-14-何有於我哉.md
+++ b/_posts/2026-01-14-何有於我哉.md
@@ -1,7 +1,7 @@
 ---
-layout: post
 title: "何有於我哉"
-date: 2026-01-14
+author: "<a href=\"https://jessekelighine.com\"><code>jessekelighine.com</code></a>"
+layout: default
 ---
 
 「**何有於我哉**」這句話的意思我一直不是很了解。
