--- a/_posts/2026-01-25-無友不如己者.md
+++ b/_posts/2026-01-25-無友不如己者.md
@@ -1,7 +1,7 @@
 ---
-layout: post
 title: "無友不如己者"
-date: 2026-01-25
+author: "<a href=\"https://jessekelighine.com\"><code>jessekelighine.com</code></a>"
+layout: default
 ---
 
 「**無友不如己者**」這句話應該是大家都比較耳熟能詳的《論語》名句之一。
